--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="row">
                 <br>
                 <div class="col-md-6 aboutleft">
-                    <img src="img/about.png" alt="" />
+                    <img src="img/about.png" alt="this is a photo" />
                     <br>
                     <br>
                 </div>
