--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                             <h5>1.5+ years experience</h5>
                             <p>Solid backgrounds for programming with logical and critical thinking </p>
                             <p>Good at algorithms and complex techniques in a fast pace</p>
-                            <p>Efficiency oriented and motivated high-achiever with</p>
+                            <p>Motivated high-achiever with efficiency</p>
                             <p>Focused and organized team worker, willing to take challenge.</p>
                         </div>
                     </div>
@@ -282,7 +282,7 @@
                                 <img src="./img/ReactGame1.png" alt="a photo for React Game">
                             </div>
                             <div class="cardback">
-                               <h4>React Game</h4>
+                                <h4>React Game</h4>
                                 <ul>
                                     <li>Using React</li>
                                     <li>Passing State and Props</li>
@@ -537,7 +537,7 @@
             <div class="col-md-6 col-sm-6">
                 <div class="grid">
                     <h4><i class="fa fa-flask"></i>Scott Chemicals Qingdao</h4>
-                    <h5>It Assistant / Import&export Manager</h5>
+                    <h5>IT Assistant / Import&export Manager</h5>
                     <p>Inner website develop</p>
                     <p>Local database maintanence</p>
                     <p>Data queries and report</p>
@@ -590,7 +590,7 @@
                 <div class="carousel-item">
                     <div class="grid">
                         <h4><i class="fa fa-flask"></i>Scott Chemicals Qingdao</h4>
-                        <h5>It Assistant / Import&export Manager</h5>
+                        <h5>IT Assistant / Import&export Manager</h5>
                         <p>Inner website develop</p>
                         <p>Local database maintanence</p>
                         <p>Data queries and report</p>
@@ -734,37 +734,120 @@
     </div>
     <!-- education End-->
 
+    <!-- achievement -->
     <div class="stats container" id="stats">
         <h3 class="heading">Achievements</h3>
         <div class="row">
             <div class="col-md-3 col-sm-3 col-3 count-grid">
-                <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='120' data-delay='1' data-increment="1">120</div>
+                <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='36' data-delay='1' data-increment="1">56</div>
                 <span></span>
                 <h6>Projects done</h6>
             </div>
             <div class="col-md-3 col-sm-3 col-3  count-grid">
-                <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='172' data-delay='1' data-increment="1">172</div>
+                <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='18' data-delay='1' data-increment="1">18</div>
                 <span></span>
-                <h6>New Companies</h6>
+                <h6>Courses finished</h6>
             </div>
             <div class="col-md-3 col-sm-3 col-3  count-grid">
-                <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='102' data-delay='1' data-increment="1">102</div>
+                <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='15' data-delay='1' data-increment="1">15</div>
                 <span></span>
-                <h6>Web designs</h6>
-            </div>
-            <div class="col-md-3 col-sm-3 col-3  count-grid">
-                <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='156' data-delay='1' data-increment="1">156</div>
-                <span></span>
-                <h6>Happy clients</h6>
+                <h6>Books read</h6>
             </div>
             <div class="clearfix"></div>
         </div>
     </div>
+    <!-- achievement End -->
 
 
-    <!-- JavaScript for bas -->
+    <!-- contact -->
+    <div class="contact container" id="contact">
+        <div class="row">
+            <h3 class="heading">Contact Me</h3>
+            <div class="col-md-4 address">
+                <h4>Address</h4>
+                <div class="mail-layouts">
+                    <i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>
+                    <div class="contact-right">
+                        <p>Phone</p><span><a href="tel:5146776679" target="_blank"> +1 (514) 677 6679</a></span>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+                <div class="mail-layouts">
+                    <i class="glyphicon glyphicon-envelope" aria-hidden="true"></i>
+                    <div class="contact-right">
+                        <p>Email</p><a href="mailto:wangzl.wit@gmail.com">wangzl.wit@gmail.com</a>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+                <div class="mail-layouts">
+                    <i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>
+                    <div class="contact-right">
+                        <p>Address</p><span>Rue D'Amalfi, Pierrefonds, Montreal </span>
+                        <br>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+                <div class="clear"></div>
+            </div>
+            <div class="col-md-4 form">
+                <form action="#" method="post">
+                    <div class="fields-grid">
+                        <div class="styled-input input-top">
+                            <input type="text" name="First name" required="">
+                            <label>Full Name</label>
+                            <span></span>
+                        </div>
+                        <div class="styled-input">
+                            <input type="email" name="Email" required="">
+                            <label>Email</label>
+                            <span></span>
+                        </div>
+                        <div class="styled-input">
+                            <input type="tel" name="Phone" required="">
+                            <label>Phone Number</label>
+                            <span></span>
+                        </div>
+                        <div class="styled-input">
+                            <textarea name="Message" required></textarea>
+                            <label>Message</label>
+                            <span></span>
+                        </div>
+                        <div class="clear"> </div>
+                    </div>
+                    <input type="submit" value="SEND">
+                </form>
+
+            </div>
+            <div class="clearfix"></div>
+        </div>
+    </div>
+    <!-- //contact End-->
+
+    <!-- footer -->
+    <div class="footer container">
+
+        <h3><a href="index.html">My Career</a></h3>
+        <div class="social" id="social">
+            <li><a href="https://github.com/wzlwit" class="github" target="_blank">
+                    <div class="front"><i class="fa fa-github"></i></div>
+                    <div class="back"><i class="fa fa-github"></i></div>
+                </a>
+            </li>
+            <li><a href="https://www.linkedin.com/in/z5809a9173" class="linkedin" target="_blank">
+                    <div class="front"><i class="fa fa-linkedin"></i></div>
+                    <div class="back"><i class="fa fa-linkedin"></i></div>
+                </a>
+            </li>
+        </div>
+
+        <p>Copyright &copy; Zhaolong Wang 2019</p>
+        <br>
+    </div>
+    <!-- //footer End-->
+
+    <!-- JavaScript for bars -->
     <script src="./js/bars.js"></script>
-    <!-- JavaScript for bas -->
+    <!-- JavaScript for bars End -->
 
     <script type="text/javascript" src="./js/numscroller-1.0.js"></script><!-- numscroller js file -->
 
