--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="A resume for programmer and web developer">
-    <meta name="keywords" content="My Career, Developer, Programmer, Responsive web">
+    <meta name="description" content="A resume for programmer and web Designer">
+    <meta name="keywords" content="My Career, Web Developer, Programmer, Responsive Web">
     <title>Wit Developer</title>
 
     <link rel="stylesheet" href="./css/font-awesome.css"> <!-- fonts and icons -->
@@ -880,6 +880,11 @@
         }
     </script>
     <!-- js for rotating card -->
+
+    <!-- move to top -->
+    <script type="text/javascript" src="js/move-top.js"></script>
+	<script type="text/javascript" src="js/easing.js"></script>
+    <!-- move to top End -->
 
 </body>
 
