--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="A resume for programmer and web Designer">
     <meta name="keywords" content="My Career, Web Developer, Programmer, Responsive Web">
-    <title>Wit Developer</title>
+    <title>Programmer and Web Developer</title>
 
     <link rel="stylesheet" href="./css/font-awesome.css"> <!-- fonts and icons -->
 
