--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                 </tr>
                                 <tr style="height:3vw"></tr>
                                 <tr>
-                                    <td colspan="3"><a href="./img/about.JPG"><i class="fa fa-download"></i> Download CV</li></a></td>
+                                    <td colspan="3"><a href="./CV_Zhaolong Wang_IT.pdf" target="_blank"><i class="fa fa-download"></i> Download CV</li></a></td>
                                 </tr>
                             </table>
                         </div>
