react project hosted

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                                 <ul>
                                     <li>Array of objects for student information</li>
                                     <li>Query by multiple values all at once</li>
-                                    <li>Search, order, modify information and more</li>
+                                    <li>Add, edit, reset or remove comments</li>
                                 </ul>
                             </div>
                         </div>
@@ -276,17 +276,17 @@
             </div>
             <div class="col-md-4 col-sm-6 gallery-frame">
                 <div class="card-container">
-                    <a target="_blank" href="https://github.com/wzlwit/JavaScript/tree/master/React/Workshop/ReactGame1">
+                    <a target="_blank" href="https://wzlwit.github.io/board">
                         <div class="card">
                             <div class="front">
-                                <img src="./img/ReactGame1.png" alt="a photo for React Game">
+                                <img src="./img/ReactBoardComments.png" alt="a photo for Board & Comments">
                             </div>
                             <div class="cardback">
-                                <h4>React Game</h4>
+                                <h4>Board & Comments</h4>
                                 <ul>
                                     <li>Using React</li>
-                                    <li>Passing State and Props</li>
-                                    <li>Search, order, modify information and more</li>
+                                    <li>Board with a lot comments</li>
+                                    <li>Add, edit, reset or remove comments</li>
                                 </ul>
                             </div>
                         </div>
@@ -396,7 +396,7 @@
                                     <ul>
                                         <li>Array of objects for student information</li>
                                         <li>Query by multiple values all at once</li>
-                                        <li>Search, order, modify information and more</li>
+                                        <li>Add, edit, reset or remove comments</li>
                                     </ul>
                                 </div>
                             </a>
@@ -405,17 +405,17 @@
                 </div>
                 <div class="carousel-item">
                     <div class="card-container">
-                        <a target="_blank" href="https://github.com/wzlwit/JavaScript/tree/master/React/Workshop/ReactGame1">
+                        <a target="_blank" href="https://wzlwit.github.io/board">
                             <div class="card">
                                 <div class="front">
-                                    <img src="./img/ReactGame1.png" alt="a photo for React Game">
+                                    <img src="./img/ReactBoardComments.png" alt="a photo for Board & Comments">
                                 </div>
                                 <div class="cardback">
-                                    <h4>React Game</h4>
+                                    <h4>Board & Comments</h4>
                                     <ul>
                                         <li>Using React</li>
-                                        <li>Passing State and Props</li>
-                                        <li>Search, order, modify information and more</li>
+                                        <li>Board with a lot comments</li>
+                                        <li>Add, edit, reset or remove comments</li>
                                     </ul>
                                 </div>
                             </div>
