add a project using React with API

--- a/index.html
+++ b/index.html
@@ -199,26 +199,6 @@
             </div>
             <div class="col-md-4 col-sm-6 gallery-frame">
                 <div class="card-container">
-                    <a target="_blank" href="https://wzlwit.github.io/TipCalculator/. ">
-                        <div class="card">
-                            <div class="front">
-                                <img src="./img/TipCalculator.png" alt="a photo for login validation">
-                            </div>
-                            <div class="cardback">
-                                <h4>Tip Calculater</h4>
-                                <ul>
-                                    <li>Inputs validation</li>
-                                    <li>Value selected or input</li>
-                                    <li>Show the result for each person</li>
-                                    <li>Message of toy</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 gallery-frame">
-                <div class="card-container">
                     <a target="_blank" href="https://wzlwit.github.io/CssGame/">
                         <div class="card">
                             <div class="front">
@@ -257,6 +237,26 @@
             </div>
             <div class="col-md-4 col-sm-6 gallery-frame">
                 <div class="card-container">
+                    <a target="_blank" href="https://wzlwit.github.io/TipCalculator/. ">
+                        <div class="card">
+                            <div class="front">
+                                <img src="./img/TipCalculator.png" alt="a photo for login validation">
+                            </div>
+                            <div class="cardback">
+                                <h4>Tip Calculater</h4>
+                                <ul>
+                                    <li>Inputs validation</li>
+                                    <li>Value selected or input</li>
+                                    <li>Show the result for each person</li>
+                                    <li>Message of toy</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 gallery-frame">
+                <div class="card-container">
                     <a target="_blank" href="https://wzlwit.github.io/StudentReport/">
                         <div class="card">
                             <div class="front">
@@ -284,9 +284,28 @@
                             <div class="cardback">
                                 <h4>Board & Comments</h4>
                                 <ul>
-                                    <li>Using React</li>
+                                    <li>Using React/Node.js</li>
                                     <li>Board with a lot comments</li>
                                     <li>Add, edit, reset or remove comments</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 gallery-frame">
+                <div class="card-container">
+                    <a target="_blank" href="https://wzlwit.github.io/video/">
+                        <div class="card">
+                            <div class="front">
+                                <img src="./img/video.png" alt="a photo for Board & Comments">
+                            </div>
+                            <div class="cardback">
+                                <h4>Video Search</h4>
+                                <ul>
+                                    <li>Using React with API</li>
+                                    <li>Search for different videos</li>
+                                    <li>Show and play video in a frame</li>
                                 </ul>
                             </div>
                         </div>
@@ -303,6 +322,9 @@
                 <li data-target="#gallery-slider" data-slide-to="3"></li>
                 <li data-target="#gallery-slider" data-slide-to="4"></li>
                 <li data-target="#gallery-slider" data-slide-to="5"></li>
+                <li data-target="#gallery-slider" data-slide-to="6"></li>
+                <li data-target="#gallery-slider" data-slide-to="7"></li>
+                <li data-target="#gallery-slider" data-slide-to="8"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -320,6 +342,25 @@
                                         <li>Rendering based on accounts</li>
                                         <li>Searh and order products</li>
                                         <li>Account and order manangement</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="card-container">
+                        <a target="_blank" href="https://wzlwit.github.io/CssGame/">
+                            <div class="card">
+                                <div class="front">
+                                    <img src="./img/CssGame.png" alt="a photo for CSS Game">
+                                </div>
+                                <div class="cardback">
+                                    <h4>CSS Game</h4>
+                                    <ul>
+                                        <li>Pure CSS/Html Game</li>
+                                        <li>4 different item clickable</li>
+                                        <li>Animation for each item </li>
                                     </ul>
                                 </div>
                             </div>
@@ -348,25 +389,6 @@
                 </div>
                 <div class="carousel-item">
                     <div class="card-container">
-                        <a target="_blank" href="https://wzlwit.github.io/CssGame/">
-                            <div class="card">
-                                <div class="front">
-                                    <img src="./img/CssGame.png" alt="a photo for CSS Game">
-                                </div>
-                                <div class="cardback">
-                                    <h4>CSS Game</h4>
-                                    <ul>
-                                        <li>Pure CSS/Html Game</li>
-                                        <li>4 different item clickable</li>
-                                        <li>Animation for each item </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="card-container">
                         <a target="_blank" href="https://github.com/wzlwit/Calculator">
                             <div class="card">
                                 <div class="front">
@@ -384,12 +406,13 @@
                         </a>
                     </div>
                 </div>
+
                 <div class="carousel-item">
                     <div class="card-container">
-                        <div class="card">
-                            <a target="_blank" href="https://wzlwit.github.io/StudentReport/">
+                        <a target="_blank" href="https://wzlwit.github.io/StudentReport/">
+                            <div class="card">
                                 <div class="front">
-                                    <img src="./img/Report.png" alt="a photo for student report">
+                                    <img src="./img/Report.png" alt="a photo for Student Report">
                                 </div>
                                 <div class="cardback">
                                     <h4>Report</h4>
@@ -399,8 +422,8 @@
                                         <li>Add, edit, reset or remove comments</li>
                                     </ul>
                                 </div>
-                            </a>
-                        </div>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -413,13 +436,32 @@
                                 <div class="cardback">
                                     <h4>Board & Comments</h4>
                                     <ul>
-                                        <li>Using React</li>
+                                        <li>Using React/Node.js</li>
                                         <li>Board with a lot comments</li>
                                         <li>Add, edit, reset or remove comments</li>
                                     </ul>
                                 </div>
                             </div>
                         </a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="card-container">
+                        <div class="card">
+                            <a target="_blank" href="https://wzlwit.github.io/video/">
+                                <div class="front">
+                                    <img src="./img/video.png" alt="a photo for video search">
+                                </div>
+                                <div class="cardback">
+                                    <h4>Video Search</h4>
+                                    <ul>
+                                        <li>Using React with API</li>
+                                        <li>Search for different videos</li>
+                                        <li>Show and play video in a frame</li>
+                                    </ul>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
