Redux dem added

--- a/index.html
+++ b/index.html
@@ -196,6 +196,27 @@
                     </a>
                 </div>
             </div>
+
+            <div class="col-md-4 col-sm-6 gallery-frame">
+                <div class="card-container">
+                    <a target="_blank" href="https://github.com/wzlwit/reduxdemo">
+                        <div class="card">
+                            <div class="front">
+                                <img src="./img/reduxdemo.png" alt="a photo for redux project">
+                            </div>
+                            <div class="cardback">
+                                <h4>Redux Project</h4>
+                                <ul>
+                                    <li>Using React and Redux</li>
+                                    <li>Show user list</li>
+                                    <li>Click user to show details</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
             <div class="col-md-4 col-sm-6 gallery-frame">
                 <div class="card-container">
                     <a target="_blank" href="https://wzlwit.github.io/TipCalculator/. ">
@@ -326,6 +347,7 @@
                 <li data-target="#gallery-slider" data-slide-to="6"></li>
                 <li data-target="#gallery-slider" data-slide-to="7"></li>
                 <li data-target="#gallery-slider" data-slide-to="8"></li>
+                <li data-target="#gallery-slider" data-slide-to="9"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -341,6 +363,26 @@
                                         <li>Using React with API</li>
                                         <li>Search for different videos</li>
                                         <li>Show and play video in a frame</li>
+                                    </ul>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="card-container">
+                        <div class="card">
+                            <a target="_blank" href="https://github.com/wzlwit/reduxdemo">
+                                <div class="front">
+                                    <img src="./img/reduxdemo.png" alt="a photo for redux project">
+                                </div>
+                                <div class="cardback">
+                                    <h4>Redux Project</h4>
+                                    <ul>
+                                        <li>Using React and Redux</li>
+                                        <li>Show user list</li>
+                                        <li>Click user to show details</li>
                                     </ul>
                                 </div>
                             </a>
